--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "All Staff IT",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0"
   },
   "repository": {
     "type": "git",
